--- a/public/Why-Udo/index.html
+++ b/public/Why-Udo/index.html
@@ -34,7 +34,7 @@
 
   <!-- Top Search Bar -->
   <header class="sticky top-0 z-50 bg-white/80 backdrop-blur-md border-b border-gray-200 shadow-sm">
-    <a href="index.html" class="absolute left-12 top-1/2 -translate-y-1/2 z-[60] hover:opacity-90 transition text-4xl font-bold">
+    <a href="../index.html" class="absolute left-12 top-1/2 -translate-y-1/2 z-[60] hover:opacity-90 transition text-4xl font-bold">
       <span class="text-orange-500">U</span><span class="text-gray-800">DO</span>
     </a>
 
@@ -85,8 +85,9 @@
                     </h2>
                     
                     <!-- Description -->
-                    <p class="text-lg lg:text-xl text-orange-50 leading-relaxed mb-8">
-                        When you find a pro through a Google search, big tech takes a cut. <br/><br/> When you use <span class="font-bold text-white">UDo App</span>, that money stays with <span class="font-bold text-white">you</span> and the <span class="font-bold text-white">worker</span>. Download now to keep your local economy direct.
+                    <p class="text-orange-50 leading-relaxed mb-8">
+                        <span class="text-2xl lg:text-3xl font-semibold block mb-4">When you find a pro through a Google search, big tech takes a cut.</span>
+                        <span class="text-lg lg:text-xl">When you use <span class="font-bold text-white">UDo App</span>, that money stays with <span class="font-bold text-white">you</span> and the <span class="font-bold text-white">worker</span>. Download now to keep your local economy direct.</span>
                     </p>
                     
                     <!-- CTA Button -->
