--- a/public/forgot-password/index.html
+++ b/public/forgot-password/index.html
@@ -131,99 +131,8 @@
     </div>
   </main>
 
-  <!-- Search Overlay -->
-  <div id="searchOverlay" class="search-overlay fixed left-0 right-0 top-0 z-[100] pt-[70px] bg-black/20 backdrop-blur-sm">
-    <div class="mx-4 h-[70vh] bg-white shadow-2xl p-8 overflow-y-auto">
-      <div class="flex items-center justify-between mb-8">
-        <div class="flex-1 mr-4">
-          <input
-            type="text"
-            id="overlaySearchInput"
-            placeholder="Search for ideas..."
-            class="w-full text-2xl font-light border-b-2 border-gray-200 pb-3 focus:outline-none focus:border-orange-500 transition"
-            autofocus
-          />
-        </div>
-        <button id="closeSearch" class="p-2 hover:bg-gray-100 rounded-full transition">
-          <svg class="w-8 h-8 text-gray-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-          </svg>
-        </button>
-      </div>
-
-      <div class="space-y-4">
-        <h3 class="text-sm font-semibold text-gray-800 uppercase tracking-wider">Recent searches</h3>
-        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-3">
-          <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
-            <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
-              <svg class="w-4 h-4 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-              </svg>
-            </button>
-            <img src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
-            <span class="text-gray-900 flex-1 text-center text-base font-medium">Furniture assembly</span>
-          </div>
-          <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
-            <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
-              <svg class="w-4 h-4 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-              </svg>
-            </button>
-            <img src="https://images.unsplash.com/photo-1532453288672-3a27e9be9efd?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
-            <span class="text-gray-900 flex-1 text-center text-base font-medium">Mount art or shelves</span>
-          </div>
-          <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
-            <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
-              <svg class="w-4 h-4 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-              </svg>
-            </button>
-            <img src="https://images.unsplash.com/photo-1600518464441-9154a4dea21b?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
-            <span class="text-gray-900 flex-1 text-center text-base font-medium">Movers</span>
-          </div>
-          <div class="group py-2 px-4 bg-gray-100 hover:bg-gray-200 rounded-2xl cursor-pointer transition overflow-hidden flex items-center max-h-[110px] relative">
-            <button class="absolute top-1/2 -translate-y-1/2 right-1 w-6 h-6 flex items-center justify-center opacity-0 group-hover:opacity-100 transition z-10">
-              <svg class="w-4 h-4 text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-              </svg>
-            </button>
-            <img src="https://images.unsplash.com/photo-1621905252507-b35492cc74b4?auto=format&fit=crop&w=100&q=80" alt="Recent" class="w-[30%] h-full object-cover mr-3 rounded-l-2xl" />
-            <span class="text-gray-900 flex-1 text-center text-base font-medium">Electrical help</span>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
+  <script src="/static/js/search-overlay.js"></script>
   <script>
-    const searchInput = document.getElementById('searchInput');
-    const searchOverlay = document.getElementById('searchOverlay');
-    const closeSearch = document.getElementById('closeSearch');
-    const overlaySearchInput = document.getElementById('overlaySearchInput');
-
-    searchInput.addEventListener('click', () => {
-      searchOverlay.classList.add('active');
-      overlaySearchInput.focus();
-    });
-
-    closeSearch.addEventListener('click', () => {
-      searchOverlay.classList.remove('active');
-    });
-
-    document.addEventListener('click', (e) => {
-      if (searchOverlay.classList.contains('active') && 
-          !searchOverlay.querySelector('.bg-white').contains(e.target) &&
-          e.target !== document.getElementById('searchInput')) {
-        searchOverlay.classList.remove('active');
-      }
-    });
-
-    document.addEventListener('keydown', (e) => {
-      if (e.key === 'Escape') {
-        searchOverlay.classList.remove('active');
-      }
-    });
-
     // Form submission
     const form = document.querySelector('form');
     form.addEventListener('submit', (e) => {
