search overlay workign across multiple pages

--- a/public/join-as-professional/index.html
+++ b/public/join-as-professional/index.html
@@ -28,8 +28,8 @@
 
   <!-- Top Search Bar -->
   <header class="sticky top-0 z-50 bg-white/80 backdrop-blur-md border-b border-gray-200 shadow-sm">
-    <a href="../index.html" class="absolute left-12 top-1/2 -translate-y-1/2 z-[60] hover:opacity-90 transition">
-      <img src="../UDO-6.jpg" alt="UDO" class="h-32 w-auto max-w-none shadow-lg rounded-lg" />
+    <a href="../index.html" class="absolute left-12 top-1/2 -translate-y-1/2 z-[60] hover:opacity-90 transition text-4xl font-bold">
+      <span class="text-orange-500">U</span><span class="text-gray-800">DO</span>
     </a>
 
     <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-3 flex items-center justify-between gap-4">
