--- a/public/Mover/index.html
+++ b/public/Mover/index.html
@@ -486,10 +486,10 @@
           <!-- Pickup Truck -->
           <div class="service-card bg-white rounded-2xl p-6 border-2 border-gray-200 cursor-pointer shadow-sm hover:shadow-md transition-all" data-service="pickup" data-movers="1" data-price-multiplier="1.0">
             <div class="text-center mb-4">
-              <div class="w-20 h-20 bg-blue-50 rounded-full flex items-center justify-center mx-auto mb-3">
-                <svg class="w-10 h-10 text-blue-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7h12m0 0l-4-4m4 4l-4 4m0 6H4m0 0l4 4m-4-4l4-4"/>
-                </svg>
+              <div class="w-32 h-24 rounded-xl overflow-hidden mb-3 mx-auto">
+                <img src="https://photos.dealerimagepro.com/lib/upper-marlboro-ford-5098/02.11.2026/USED/%28Chevrolet%20-%20Silverado%201500%291GCPYBEK1MZ261586/1GCPYBEK1MZ261586--01.jpg?ver=1770850289?auto=format&fit=crop&w=600&q=80" 
+                     alt="Pickup Truck" 
+                     class="w-full h-full object-cover hover:scale-110 transition-transform duration-300">
               </div>
               <h3 class="text-xl font-bold text-gray-900 mb-1">Pickup Truck</h3>
               <div class="inline-flex items-center gap-1 bg-blue-100 text-blue-700 text-sm font-semibold px-3 py-1 rounded-full">
@@ -510,11 +510,10 @@
           <!-- Small Truck / Cargo Van -->
           <div class="service-card bg-white rounded-2xl p-6 border-2 border-gray-200 cursor-pointer shadow-sm hover:shadow-md transition-all" data-service="cargo-van" data-movers="2" data-price-multiplier="1.3">
             <div class="text-center mb-4">
-              <div class="w-20 h-20 bg-green-50 rounded-full flex items-center justify-center mx-auto mb-3">
-                <svg class="w-10 h-10 text-green-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 17a2 2 0 11-4 0 2 2 0 014 0zM19 17a2 2 0 11-4 0 2 2 0 014 0z"/>
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16V6a1 1 0 00-1-1H4a1 1 0 00-1 1v10a1 1 0 001 1h1m8-1a1 1 0 01-1 1H9m4-1V8a1 1 0 011-1h2.586a1 1 0 01.707.293l3.414 3.414a1 1 0 01.293.707V16a1 1 0 01-1 1h-1m-6-1a1 1 0 001 1h1M5 17a2 2 0 104 0m-4 0a2 2 0 114 0m6 0a2 2 0 104 0m-4 0a2 2 0 114 0"/>
-                </svg>
+              <div class="w-20 h-20 bg-green-50 rounded-full flex items-center justify-center mx-auto mb-3 overflow-hidden">
+                <img src="https://www.gmc.com/content/dam/gmc/na/us/english/index/vehicles/2025/vans/savana-cargo/exterior/2025-savana-cargo-exterior-header-l-2500x833-25PGSV00036.jpg?imwidth=2400?auto=format&fit=crop&w=600&q=80" 
+                     alt="Small Cargo Van" 
+                     class="w-full h-full object-cover hover:scale-105 transition-transform duration-300">
               </div>
               <h3 class="text-xl font-bold text-gray-900 mb-1">Small Truck</h3>
               <div class="inline-flex items-center gap-1 bg-green-100 text-green-700 text-sm font-semibold px-3 py-1 rounded-full">
@@ -538,10 +537,10 @@
           <!-- Sprinter Van -->
           <div class="service-card bg-white rounded-2xl p-6 border-2 border-gray-200 cursor-pointer shadow-sm hover:shadow-md transition-all" data-service="sprinter" data-movers="2" data-price-multiplier="1.5">
             <div class="text-center mb-4">
-              <div class="w-20 h-20 bg-orange-50 rounded-full flex items-center justify-center mx-auto mb-3">
-                <svg class="w-10 h-10 text-orange-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 8h14M5 8a2 2 0 110-4h14a2 2 0 110 4M5 8v10a2 2 0 002 2h10a2 2 0 002-2V8m-9 4h4"/>
-                </svg>
+              <div class="w-20 h-20 bg-orange-50 rounded-full flex items-center justify-center mx-auto mb-3 overflow-hidden">
+                <img src="https://images.unsplash.com/photo-1559024665-299e06b6fcf?auto=format&fit=crop&w=600&q=80" 
+                     alt="Sprinter Van" 
+                     class="w-full h-full object-cover hover:scale-105 transition-transform duration-300">
               </div>
               <h3 class="text-xl font-bold text-gray-900 mb-1">Sprinter Van</h3>
               <div class="inline-flex items-center gap-1 bg-orange-100 text-orange-700 text-sm font-semibold px-3 py-1 rounded-full">
@@ -565,11 +564,10 @@
           <!-- Large Box Truck -->
           <div class="service-card bg-white rounded-2xl p-6 border-2 border-gray-200 cursor-pointer shadow-sm hover:shadow-md transition-all" data-service="large-box" data-movers="2" data-price-multiplier="1.8">
             <div class="text-center mb-4">
-              <div class="w-20 h-20 bg-red-50 rounded-full flex items-center justify-center mx-auto mb-3">
-                <svg class="w-10 h-10 text-red-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 17a2 2 0 11-4 0 2 2 0 014 0zM19 17a2 2 0 11-4 0 2 2 0 014 0z"/>
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16V6a1 1 0 00-1-1H4a1 1 0 00-1 1v10a1 1 0 001 1h1m8-1a1 1 0 01-1 1H9m4-1V8a1 1 0 011-1h2.586a1 1 0 01.707.293l3.414 3.414a1 1 0 01.293.707V16a1 1 0 01-1 1h-1m-6-1a1 1 0 001 1h1M5 17a2 2 0 104 0m-4 0a2 2 0 114 0m6 0a2 2 0 104 0m-4 0a2 2 0 114 0"/>
-                </svg>
+              <div class="w-20 h-20 bg-red-50 rounded-full flex items-center justify-center mx-auto mb-3 overflow-hidden">
+                <img src="https://images.unsplash.com/photo-1584622481278-5f1f02b5c0?auto=format&fit=crop&w=600&q=80" 
+                     alt="Large Box Truck" 
+                     class="w-full h-full object-cover hover:scale-105 transition-transform duration-300">
               </div>
               <h3 class="text-xl font-bold text-gray-900 mb-1">Large Box Truck</h3>
               <div class="inline-flex items-center gap-1 bg-red-100 text-red-700 text-sm font-semibold px-3 py-1 rounded-full">
@@ -694,7 +692,7 @@
           </a>
           <a href="#" class="text-gray-600 hover:text-orange-500 transition">
             <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
-              <path d="M12 2.163c3.204 0 3.584.012 4.85.072 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"/>
+              <path d="M12 2.163c3.204 0 3.584.012 4.85.072 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.919-1.266.058-1.644-.07-4.849 0-3.204.013-3.583.07-4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.07-1.645-.069 4.849-.069zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.163c0-3.403-2.759-6.162-6.163zm0 10.162c-2.209 0-4-1.79-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.21-1.791 4 4-4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.441-1.44z"/>
             </svg>
           </a>
         </div>
