--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@
       </a>
 
       <!-- Card 3 -->
-      <a href="profiles-list/?category=movers" class="group relative rounded-3xl overflow-hidden shadow-md hover:shadow-xl transition-shadow duration-300 bg-white h-[351px] w-[96%] mx-auto cursor-pointer">
+      <a href="/mover" class="group relative rounded-3xl overflow-hidden shadow-md hover:shadow-xl transition-shadow duration-300 bg-white h-[351px] w-[96%] mx-auto cursor-pointer">
         <img
           src="https://images.unsplash.com/photo-1600518464441-9154a4dea21b?auto=format&fit=crop&w=800&q=80"
           alt="Movers"
