--- a/public/Mover/index.html
+++ b/public/Mover/index.html
@@ -615,9 +615,9 @@
               </svg>
             </div>
             <div>
-              <h3 class="text-lg font-bold text-gray-900 mb-2">The "Premium" Justification</h3>
-              <p class="text-gray-700 leading-relaxed">
-                Because your drivers are paid more, your price might be higher than a random person on Craigslist. But you're paying for <strong>verified professionals</strong> who show up on time, handle your belongings with care, and have full insurance coverage. No hidden fees, no surprises.
+              <h3 class="text-lg font-bold text-gray-900 mb-2">Verified Professionals</h3>
+              <p class="text-gray-700 leading-relaxed"></p>
+                Our movers are <strong>verified professionals</strong> with background checks, full insurance coverage, and top-rated service. No hidden fees, no surprises.
               </p>
             </div>
           </div>
@@ -809,6 +809,8 @@
       </div>
     </div>
   </footer>
+
+  <script src="/static/js/search-overlay.js"></script>
 
   <script>
     // State
