--- a/public/index.html
+++ b/public/index.html
@@ -186,9 +186,12 @@
         <!-- Right Column - Text Content -->
         <div class="flex-1 flex flex-col justify-center">
           <h2 class="text-4xl lg:text-5xl font-bold text-gray-900 mb-6">
-            Get the Help You Need, When You Need It
+            Get the Help You Need, When You Need It 
           </h2>
           <p class="text-lg text-gray-600 leading-relaxed mb-8">
+            <h1 class="text-base font-normal text-gray-700"> Let somebody else do it for you. </h1>
+     
+            
             Connect with local professionals for any task around your home. From furniture assembly to home repairs, we make it easy to find skilled help at fair prices. No middleman, no hidden fees, just quality service you can trust.
           </p>
           <a href="profiles-list/" class="bg-orange-500 hover:bg-orange-600 text-white font-semibold py-4 px-8 rounded-full text-lg transition duration-300 shadow-md hover:shadow-lg w-fit inline-block">
