--- a/public/index.html
+++ b/public/index.html
@@ -243,7 +243,10 @@
             <span class="text-orange-500">U</span><span class="text-gray-800">DO™</span>
           </h3>
           <p class="text-gray-700 text-sm leading-relaxed">
-            Connect with verified professionals for any task. No middleman, no hidden fees, just quality service you can trust.
+            <h1 class="text-base font-normal text-gray-700">
+              UDO: Let somebody else do it for you.
+          </h1>
+            
           </p>
         </div>
 
