--- a/public/rideshare/index.html
+++ b/public/rideshare/index.html
@@ -191,7 +191,7 @@
                         <span class="text-orange-500">U</span><span class="text-gray-800">DO™</span>
                     </h3>
                     <p class="text-gray-700 text-sm leading-relaxed">
-                        Connect with drivers and passengers. Find rides or offer rides - safe, affordable, and convenient.
+                        UDO Let someone else do it for you.
                     </p>
                 </div>
 
