--- a/public/settings/index.html
+++ b/public/settings/index.html
@@ -450,7 +450,7 @@
             <span class="text-orange-500">U</span><span class="text-gray-800">DO™</span>
           </h3>
           <p class="text-gray-700 text-sm leading-relaxed">
-            Connect with verified professionals for any task. No middleman, no hidden fees, just quality service you can trust.
+            UDO Let someone else do it for you.
           </p>
         </div>
 
