--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -138,7 +138,8 @@
           <div class="flex items-center space-x-4">
             <!-- Menu Button -->
             <div class="relative">
-              <button id="menuButton" class="text-white hover:text-orange-300 transition drop-shadow-xl p-2 rounded-lg backdrop-blur-sm hover:bg-white/10">
+              <button id="menuButton" class="text-white hover:text-orange-300 transition drop-shadow-xl p-2 rounded-full backdrop-blur-sm hover:bg-white/10">
+
                 <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
                 </svg>
