--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -186,7 +186,7 @@
     </nav>
         <!-- Slide 1 -->
         <div class="carousel-slide absolute inset-0 transition-opacity duration-1000 ease-in-out opacity-100" data-slide="0">
-            <img src="https://images.unsplash.com/photo-1532550907401-a500c9a57435?w=1600&h=600&fit=crop" alt="Delicious shrimp plate" class="w-full h-full object-cover">
+            <img src="../img/shrimp.webp" alt="Delicious shrimp plate" class="w-full h-full object-cover">
             <div class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center">
                 <div class="text-center text-white px-4">
                     <h2 class="text-4xl font-bold mb-4">Exquisite Seafood</h2>
@@ -235,6 +235,7 @@
             <button class="carousel-dot w-3 h-3 rounded-full bg-white opacity-100 transition-opacity" data-slide="0"></button>
             <button class="carousel-dot w-3 h-3 rounded-full bg-white opacity-50 transition-opacity" data-slide="1"></button>
             <button class="carousel-dot w-3 h-3 rounded-full bg-white opacity-50 transition-opacity" data-slide="2"></button>
+            <button class="carousel-dot w-3 h-3 rounded-full bg-white opacity-50 transition-opacity" data-slide="3"></button>
         </div>
     </div>
 
