--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -136,6 +136,11 @@
           </div>
           
           <div class="flex items-center space-x-4">
+
+            <button href="../join-as-professional/" class="bg-gradient-to-r from-orange-400 to-orange-600 text-white font-bold px-4 py-2 rounded-full hover:from-orange-500 hover:to-orange-700 transition-all shadow-md mr-4">
+            Start cooking
+          </button>
+          
             <!-- Menu Button -->
             <div class="relative">
               <button id="menuButton" class="text-white hover:text-orange-300 transition drop-shadow-xl p-2 rounded-full backdrop-blur-sm hover:bg-white/10">
