--- a/public/foods/index.html
+++ b/public/foods/index.html
@@ -684,6 +684,202 @@
         </div>
     </div>
 
+<!-- new test food carousal start -->
+      <section class="px-4 pb-12 md:px-8 lg:px-16 xl:px-24">
+         <!-- Food Cards Grid -->
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+            
+            <!-- Food Card 1 -->
+            <div class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group">
+                <div class="relative">
+                    <img src="https://images.unsplash.com/photo-1626082927389-6cd097cdc6ec?w=600&h=400&fit=crop" 
+                         alt="Grilled Salmon" 
+                         class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+                    <div class="absolute top-4 left-4">
+                        <span class="bg-orange-500 text-white text-sm font-bold px-3 py-1 rounded-full">9.4</span>
+                    </div>
+                    <button class="absolute top-4 right-4 bg-white rounded-full p-2 shadow-lg hover:bg-gray-100 transition-colors">
+                        <svg class="w-5 h-5 text-red-500" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"/>
+                        </svg>
+                    </button>
+                </div>
+                <div class="p-5">
+                    <div class="flex items-center justify-between mb-2">
+                        <span class="text-xs text-gray-500 font-medium">American Cuisine</span>
+                        <span class="text-xs text-gray-500">25-30 min</span>
+                    </div>
+                    <h3 class="text-xl font-bold text-gray-900 mb-2 group-hover:text-orange-500 transition-colors">Grilled Salmon</h3>
+                    <p class="text-gray-600 text-sm mb-3 line-clamp-2">Perfectly grilled Atlantic salmon with herbs, served with seasonal vegetables and lemon butter sauce.</p>
+                    <div class="flex items-center justify-between">
+                        <span class="text-2xl font-bold text-gray-900">$24.99</span>
+                        <button class="bg-orange-500 text-white px-4 py-2 rounded-full text-sm font-semibold hover:bg-orange-600 transition-colors">
+                            Book Now
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Food Card 2 -->
+            <div class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group">
+                <div class="relative">
+                    <img src="https://images.unsplash.com/photo-1565299624946-b28f40a0ae38?w=600&h=400&fit=crop" 
+                         alt="Margherita Pizza" 
+                         class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+                    <div class="absolute top-4 left-4">
+                        <span class="bg-orange-500 text-white text-sm font-bold px-3 py-1 rounded-full">9.2</span>
+                    </div>
+                    <button class="absolute top-4 right-4 bg-white rounded-full p-2 shadow-lg hover:bg-gray-100 transition-colors">
+                        <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"/>
+                        </svg>
+                    </button>
+                </div>
+                <div class="p-5">
+                    <div class="flex items-center justify-between mb-2">
+                        <span class="text-xs text-gray-500 font-medium">Italian Cuisine</span>
+                        <span class="text-xs text-gray-500">30-40 min</span>
+                    </div>
+                    <h3 class="text-xl font-bold text-gray-900 mb-2 group-hover:text-orange-500 transition-colors">Margherita Pizza</h3>
+                    <p class="text-gray-600 text-sm mb-3 line-clamp-2">Classic homemade pizza with fresh mozzarella, tomatoes, and basil on a crispy crust.</p>
+                    <div class="flex items-center justify-between">
+                        <span class="text-2xl font-bold text-gray-900">$18.99</span>
+                        <button class="bg-orange-500 text-white px-4 py-2 rounded-full text-sm font-semibold hover:bg-orange-600 transition-colors">
+                            Book Now
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Food Card 3 -->
+            <div class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group">
+                <div class="relative">
+                    <img src="https://images.unsplash.com/photo-1565299585323-38d6b0865b47?w=600&h=400&fit=crop" 
+                         alt="Beef Tacos" 
+                         class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+                    <div class="absolute top-4 left-4">
+                        <span class="bg-orange-500 text-white text-sm font-bold px-3 py-1 rounded-full">9.6</span>
+                    </div>
+                    <button class="absolute top-4 right-4 bg-white rounded-full p-2 shadow-lg hover:bg-gray-100 transition-colors">
+                        <svg class="w-5 h-5 text-red-500" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"/>
+                        </svg>
+                    </button>
+                </div>
+                <div class="p-5">
+                    <div class="flex items-center justify-between mb-2">
+                        <span class="text-xs text-gray-500 font-medium">Mexican Cuisine</span>
+                        <span class="text-xs text-gray-500">20-25 min</span>
+                    </div>
+                    <h3 class="text-xl font-bold text-gray-900 mb-2 group-hover:text-orange-500 transition-colors">Beef Tacos</h3>
+                    <p class="text-gray-600 text-sm mb-3 line-clamp-2">Authentic street-style tacos with seasoned beef, fresh salsa, and homemade guacamole.</p>
+                    <div class="flex items-center justify-between">
+                        <span class="text-2xl font-bold text-gray-900">$14.99</span>
+                        <button class="bg-orange-500 text-white px-4 py-2 rounded-full text-sm font-semibold hover:bg-orange-600 transition-colors">
+                            Book Now
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Food Card 4 -->
+            <div class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group">
+                <div class="relative">
+                    <img src="https://images.unsplash.com/photo-1512621776951-a57141f2eefd?w=600&h=400&fit=crop" 
+                         alt="Vegetable Bowl" 
+                         class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+                    <div class="absolute top-4 left-4">
+                        <span class="bg-orange-500 text-white text-sm font-bold px-3 py-1 rounded-full">9.0</span>
+                    </div>
+                    <button class="absolute top-4 right-4 bg-white rounded-full p-2 shadow-lg hover:bg-gray-100 transition-colors">
+                        <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"/>
+                        </svg>
+                    </button>
+                </div>
+                <div class="p-5">
+                    <div class="flex items-center justify-between mb-2">
+                        <span class="text-xs text-gray-500 font-medium">Vegetarian</span>
+                        <span class="text-xs text-gray-500">15-20 min</span>
+                    </div>
+                    <h3 class="text-xl font-bold text-gray-900 mb-2 group-hover:text-orange-500 transition-colors">Buddha Bowl</h3>
+                    <p class="text-gray-600 text-sm mb-3 line-clamp-2">Nutritious grain bowl with roasted vegetables, quinoa, and tahini dressing.</p>
+                    <div class="flex items-center justify-between">
+                        <span class="text-2xl font-bold text-gray-900">$16.99</span>
+                        <button class="bg-orange-500 text-white px-4 py-2 rounded-full text-sm font-semibold hover:bg-orange-600 transition-colors">
+                            Book Now
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Food Card 5 -->
+            <div class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group">
+                <div class="relative">
+                    <img src="https://images.unsplash.com/photo-1600891964092-4316c288032e?w=600&h=400&fit=crop" 
+                         alt="Pad Thai" 
+                         class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+                    <div class="absolute top-4 left-4">
+                        <span class="bg-orange-500 text-white text-sm font-bold px-3 py-1 rounded-full">9.3</span>
+                    </div>
+                    <button class="absolute top-4 right-4 bg-white rounded-full p-2 shadow-lg hover:bg-gray-100 transition-colors">
+                        <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"/>
+                        </svg>
+                    </button>
+                </div>
+                <div class="p-5">
+                    <div class="flex items-center justify-between mb-2">
+                        <span class="text-xs text-gray-500 font-medium">Thai Cuisine</span>
+                        <span class="text-xs text-gray-500">25-30 min</span>
+                    </div>
+                    <h3 class="text-xl font-bold text-gray-900 mb-2 group-hover:text-orange-500 transition-colors">Pad Thai</h3>
+                    <p class="text-gray-600 text-sm mb-3 line-clamp-2">Traditional Thai stir-fried rice noodles with shrimp, peanuts, and fresh herbs.</p>
+                    <div class="flex items-center justify-between">
+                        <span class="text-2xl font-bold text-gray-900">$19.99</span>
+                        <button class="bg-orange-500 text-white px-4 py-2 rounded-full text-sm font-semibold hover:bg-orange-600 transition-colors">
+                            Book Now
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Food Card 6 -->
+            <div class="bg-white rounded-2xl shadow-sm overflow-hidden hover:shadow-lg transition-shadow cursor-pointer group">
+                <div class="relative">
+                    <img src="https://images.unsplash.com/photo-1603894584373-5ac82b2ae398?w=600&h=400&fit=crop" 
+                         alt="Chicken Parmesan" 
+                         class="w-full h-48 object-cover group-hover:scale-105 transition-transform duration-300">
+                    <div class="absolute top-4 left-4">
+                        <span class="bg-orange-500 text-white text-sm font-bold px-3 py-1 rounded-full">9.5</span>
+                    </div>
+                    <button class="absolute top-4 right-4 bg-white rounded-full p-2 shadow-lg hover:bg-gray-100 transition-colors">
+                        <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"/>
+                        </svg>
+                    </button>
+                </div>
+                <div class="p-5">
+                    <div class="flex items-center justify-between mb-2">
+                        <span class="text-xs text-gray-500 font-medium">Italian Cuisine</span>
+                        <span class="text-xs text-gray-500">30-35 min</span>
+                    </div>
+                    <h3 class="text-xl font-bold text-gray-900 mb-2 group-hover:text-orange-500 transition-colors">Chicken Parmesan</h3>
+                    <p class="text-gray-600 text-sm mb-3 line-clamp-2">Breaded chicken breast topped with marinara sauce and melted mozzarella cheese.</p>
+                    <div class="flex items-center justify-between">
+                        <span class="text-2xl font-bold text-gray-900">$22.99</span>
+                        <button class="bg-orange-500 text-white px-4 py-2 rounded-full text-sm font-semibold hover:bg-orange-600 transition-colors">
+                            Book Now
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+      </section>
+
+<!-- new test food carousal end -->
+
     <!-- Food Cards Carousel -->
       <div class="px-4 pb-12 md:px-8 lg:px-16 xl:px-24">
         <div class="flex overflow-x-auto space-x-4 pb-4 snap-x snap-mandatory scrollbar-hide">
